--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -147,13 +147,13 @@ ul.last {
 
 /* Yellow: Caution, Warning */
 .caution, .warning {
-  border: 1px #faebcc solid;
+  border: 1px #ddcb0d solid;
 }
 
 .caution>.admonition-title,
 .warning>.admonition-title {
-  background-color: #fcf8e3;
-  color: #8a6d3b;
+  background-color: #ddcb0d;
+  color: #020201;
   padding: 6px;
 }
 
